--- a/app/components/usertopbar.module.css
+++ b/app/components/usertopbar.module.css
@@ -2,11 +2,70 @@
   width: 100%;
   height: 50px;
   display: flex;
-  flex-direction: space-between;
+  justify-content: space-between;
   border-bottom: 2px solid red;
 }
 
 .fsmtitle {
   font-size: 2em;
   font-weight: 800;
+}
+
+
+
+.container li {
+  padding: 8px;
+  transition: .1s ease-in;
+}
+
+.container li:hover {
+  cursor: pointer;
+  background: rgb(141, 83, 83);  
+  margin-left: 5px;
+}
+
+
+.profileContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0px 5px 0px 5px;
+  cursor: pointer;
+  margin-right: 15px;
+  transition: .1s ease-in;  
+}
+
+.profileContainer:hover {
+  background: rgb(141, 83, 83);
+}
+
+
+.modalContainer {
+  width: 200px;
+  position: absolute;
+  z-index: 2;
+  top: 50px;
+  left: 1650px;
+  background-color: white;
+  color: black;
+  box-shadow: 0px 0px 10px 0px;
+}
+
+.modalContent {
+  display: flex;
+  flex-direction: column;
+}
+
+.modalSectionDelimiter {
+  height: 1px;
+  width: 100%;
+  box-shadow: 1px 1px 1px 1px;
+}
+
+.modalImageContainer {
+  border: 1px solid rgb(192, 192, 192);
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  margin: 20px;
 }
