--- a/app/components/profileCard.module.css
+++ b/app/components/profileCard.module.css
@@ -1,9 +1,9 @@
 .container {
-  border: 1px solid red;
   width: 500px;
-  background-color: var(--background-one);
+  background-color: white;
   height: 600px;
   display: flex;
+  color: black;
   justify-content: space-between;
   flex-direction: column;
   box-shadow: 12px 15px 42px 0px rgba(0,0,0,0.1);
