--- a/app/components/usertopbar.module.css
+++ b/app/components/usertopbar.module.css
@@ -1,17 +1,17 @@
 .container {
   width: 100%;
   height: 50px;
+  padding: 10px;
   display: flex;
   justify-content: space-between;
-  border-bottom: 2px solid red;
+  background-color: white;
+  color: black;
 }
 
 .fsmtitle {
   font-size: 2em;
   font-weight: 800;
 }
-
-
 
 .container li {
   padding: 8px;
@@ -33,6 +33,14 @@
   cursor: pointer;
   margin-right: 15px;
   transition: .1s ease-in;  
+}
+
+.imageContainer {
+  box-shadow: 12px 15px 42px 0px rgba(0,0,0,0.1);
+  width: 40px;
+  height: 40px;
+  background: white;
+  border-radius: 50%;
 }
 
 .profileContainer:hover {
