--- a/app/home/page.module.css
+++ b/app/home/page.module.css
@@ -1,4 +1,30 @@
 .container {
   padding:50px;
   background-color: white;
+  color: black;
+  display: flex;
+  height: 100vh;
+  justify-content: space-between;
+}
+
+.contentContainer {
+  width: 60%;
+}
+
+.contentHeader{
+  height: 50px;
+  width: 100%;
+  display: flex;
+}
+.contentHeader div {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.contentBody {
+  height: 100%;
+  padding: 20px;
 }
