--- a/app/home/page.module.css
+++ b/app/home/page.module.css
@@ -9,12 +9,16 @@
 
 .contentContainer {
   width: 60%;
+  border-top: 25%;
 }
 
 .contentHeader{
   height: 50px;
   width: 100%;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
   display: flex;
+  box-shadow: -1px -5px 25px -10px rgba(0, 0, 0, 0.166), 0px 0px 0px 0px #000, 0px 0px 0px 0px #000, 0px 0px 0px 0px #000;
 }
 .contentHeader div {
   width: 50%;
@@ -25,6 +29,7 @@
 }
 
 .contentBody {
-  height: 100%;
+  height: auto;
   padding: 20px;
+  box-shadow: -1px 0px 25px -10px rgba(0, 0, 0, 0.166), 0px 0px 0px 0px #000;
 }
