--- a/app/components/styles/settings.module.css
+++ b/app/components/styles/settings.module.css
@@ -2,7 +2,10 @@
   width: 500px;
   height: 700px;
   padding: 30px;
-  box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.391)
+  position: absolute;
+  background-color: white;
+  box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.391);
+  z-index: 2;
 }
 
 .headerContainer {
