--- a/app/components/styles/settings.module.css
+++ b/app/components/styles/settings.module.css
@@ -1,8 +1,19 @@
 .container {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.modalContainer {
   width: 500px;
   height: 700px;
   padding: 30px;
-  position: absolute;
   background-color: white;
   box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.391);
   z-index: 2;
@@ -10,5 +21,11 @@
 
 .headerContainer {
   display: flex;
-  justify-content: end;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.headerContainer span {
+  font-weight: 800;
+  font-size: 28px;
 }
