--- a/app/components/styles/colorTheme.module.css
+++ b/app/components/styles/colorTheme.module.css
@@ -25,3 +25,12 @@
   width: 100%;
   padding: 0px 0px 3px 13px;
 }
+
+.confirmedIcon {
+  position: relative;
+  top: -33px;
+  left: 48px;
+  border-radius: 50%;
+  box-shadow: 0px 0px 15px -4px black;
+  background-color: white;
+}
