--- a/app/components/styles/settings.module.css
+++ b/app/components/styles/settings.module.css
@@ -46,3 +46,10 @@
 .contentContainer section>div>div {
   margin-right: 10px;
 }
+
+.separator {
+  width: 100%;
+  height: 1px;
+  margin: auto;
+  background-color: rgba(128, 128, 128, 0.406);
+}
