add loading icons

--- a/app/components/styles/newPost.module.css
+++ b/app/components/styles/newPost.module.css
@@ -4,27 +4,49 @@
 
 .postButton {
   display: flex;
-  width: 25px;
-  justify-content: space-between;
+  width: 150px;
+  padding: 10px;
+  cursor: pointer;
+  justify-content: space-around;
   border: 1px solid lightblue;
-  border-radius: 25%;
+  border-radius: 5px;
 }
 
 .componentContainer {
   position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
   top: 0;
   left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #00000060;
 }
 
 .componentContainerContent {
   width: 500px;
   height: 300px;
-  background-color: 25px;
+  background-color: white;
+  padding: 20px;
 }
 
 .componentHeader {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.componentSubmitButton {
+  width: 100px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 25px;
+  color: white;
+  font-weight: 800;
+  background: rgb(255,103,103);
+  background: linear-gradient(130deg, rgba(255,103,103,1) 0%, rgba(30,9,121,1) 92%); 
 }
