add new post features

--- a/app/components/styles/newPost.module.css
+++ b/app/components/styles/newPost.module.css
@@ -7,9 +7,12 @@
   width: 150px;
   padding: 10px;
   cursor: pointer;
+  color: white;
   justify-content: space-around;
   border: 1px solid lightblue;
   border-radius: 5px;
+  background: rgb(255,103,103);
+  background: linear-gradient(130deg, rgba(255,103,103,1) 0%, rgb(121, 9, 91) 92%); 
 }
 
 .componentContainer {
@@ -39,7 +42,7 @@
 }
 
 .componentSubmitButton {
-  width: 100px;
+  width: 150px;
   height: 50px;
   display: flex;
   justify-content: center;
@@ -49,4 +52,11 @@
   font-weight: 800;
   background: rgb(255,103,103);
   background: linear-gradient(130deg, rgba(255,103,103,1) 0%, rgba(30,9,121,1) 92%); 
+}
+
+.componentAddImageButton {
+  width: 25px;
+  height: 25px;
+  background-color: white;
+  cursor: pointer;
 }
